fix overflow in excerpt cards

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -449,6 +449,7 @@ table.plain {
     padding: 15px;
     -webkit-box-shadow: 1px 2px 7px -2px rgba(0, 0, 0, 0.3);
     box-shadow: 1px 2px 7px -2px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
 }
 
 /* Add a little circle in the middle of the border-top on our .post
@@ -477,6 +478,11 @@ table.plain {
 
 .post-title a {
     text-decoration: none;
+}
+
+.post-excerpt {
+    max-height: 302px;
+    overflow:hidden;
 }
 
 .post-excerpt p {
@@ -1028,6 +1034,7 @@ table.plain {
     }
 .post-excerpt p {
 	font-size: 1.7rem;
+
 }
 
 }
